--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@color/red"
         android:textSize="90sp" />
-
-
-
-    <!--<Button
-        android:id="@+id/start_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="СТАРТ"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:background="#EF5350"
-        android:layout_alignParentBottom="true"
-        android:textStyle="bold" />-->
-
-
 
 </RelativeLayout>
